# zellij-tab-manager

./: Cargo.toml  Justfile  LICENSE  README.md
config/layouts/directory/: default.kdl
config/layouts/file/: default.kdl
src/: main.rs
